Changelog
=========

1.3-dev0 - (unreleased)
---------------------------

1.2 - (2021-11-11)
---------------------------
* Change: Fix python version requirement
  [avoinea]

1.1 - (2021-11-11)
---------------------------
* Change: Added plonesaas jenkins test
  [iulianpetchesi refs #139888]

1.0 - (2021-11-09)
-----------------------

* Initial release.
  [eea]